--- a/src/tasks/components/home.html
+++ b/src/tasks/components/home.html
@@ -1,4 +1,5 @@
 <div class="g-row">
+    <h2>Bachelor of Architectural Studies - BAS</h2>
     <div class="g-col">
         <h3>Choose Course To Add</h3>
         <form [formGroup]="form">
@@ -32,7 +33,7 @@
                 <select name="course"  formControlName="course">
                         <option value="">-- Select --</option>
                         <option *ngFor="let course of filteredCourses$ |async" [ngValue]="course">  
-                            {{course.title}}
+                            {{course.title}} [{{course.code}}]
                         </option>
                     </select>
                 <button (click)="addCourse()">Add</button>
@@ -41,11 +42,22 @@
         </form>
     </div>
     <div class="g-col">
-        <h3>Courses</h3>
+        <h3>Courses - {{totalPoints}} pts</h3>
         <ul>
             <li *ngFor="let c of selectedCourses">
-                <span>{{c.title}}</span>
+                <span>{{c.title}} [ {{c.code}}]</span>
                 <button (click)="removeCourse(c.$key)">Remove</button> </li>
             </ul>
     </div>
+    <div class="g-col">
+        <h3>Results</h3>
+        <ul>
+            <li *ngFor="let res of results">
+                <div *ngIf="!res.passed">
+                    {{res.errors[0]}}
+                </div>
+                </li>
+            </ul>
+    </div>    
+        
 </div>
