remove course and update points

--- a/src/perf-test/components/test.component.html
+++ b/src/perf-test/components/test.component.html
@@ -43,4 +43,4 @@
 
 </form>
 
-<course-list [selectedCourses]="selectedCourses$"></course-list>
+<course-list [selectedCourses]="selectedCourses$" (onRemoveCourse)="removeCourse($event)"></course-list>
